<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitegray"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/wel"
                android:fontFamily="@font/tt0140m_"
                android:textColor="@color/blood_red"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginemail"
                android:autofillHints="Email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColorHint="@color/blood_red"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:background="@drawable/button_white"
                android:drawableStart="@drawable/ic_baseline_person_24"/>

            <EditText
                android:id="@+id/edPassword"
                android:autofillHints="@string/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:textColorHint="@color/blood_red"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:background="@drawable/button_white"
                android:drawableStart="@drawable/ic_baseline_https_24"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_red"
                android:text="@string/login"
                android:textColor="@color/text_white"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textColor="@color/blood_red"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_regist"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_white"
                android:text="@string/Reg"
                android:textColor="@color/blood_red"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>