<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitegray"
    tools:context=".register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/Reg"
                android:fontFamily="@font/tt0140m_"
                android:textColor="@color/blood_red"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reName"
                android:autofillHints="@string/user"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:inputType="textPersonName"
                android:hint="@string/user"
                android:textColorHint="@color/blood_red"
                android:background="@drawable/button_white"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_baseline_person_24"/>


            <EditText
                android:id="@+id/reEmail"
                android:autofillHints="Email"
                android:hint="Email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/blood_red"
                android:background="@drawable/button_white"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_create_24" />

            <EditText
                android:id="@+id/rePassword"
                android:autofillHints="@string/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/blood_red"
                android:background="@drawable/button_white"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_create_24" />


            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:id="@+id/submit_regist"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textColor="@color/text_white"
                android:textSize="15sp"
                android:background="@drawable/button_red"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>